refactor(template): 경고 제거